src/snapshots/kk__test_type_check__array_homogeneous_element_1.snap
---
source: src/main.rs
expression: "type_check_source(\"let x = [1, #hey]\".trim().to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 0,
                    line_end: 0,
                    column_start: 12,
                    column_end: 15,
                },
            },
            expected_type: Named {
                name: "number",
                arguments: [],
            },
            actual_type: Union(
                UnionType {
                    tags: [
                        TagType {
                            tagname: "#hey",
                            payload: None,
                        },
                    ],
                    bound: AtLeast,
                    catch_all: false,
                },
            ),
        },
    ),
)
