src/snapshots/kk__test_type_check__let_monadic_binding_boolean.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            let guess = \\\\x => \n                let true = x\n                2\n            \".trim().to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 17,
                    column_end: 17,
                },
            },
            expected_type: Named {
                name: "boolean",
                arguments: [],
            },
            actual_type: Named {
                name: "number",
                arguments: [],
            },
        },
    ),
)
