src/snapshots/kk__test_type_check__let_monadic_binding_tagged_union.snap
---
source: src/main.rs
expression: "type_check_source(\"\n            let f = \\\\x => \n                let #some(yo) = x\n                2\n            \".trim().to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 17,
                    column_end: 17,
                },
            },
            expected_type: Union(
                UnionType {
                    tags: [
                        TagType {
                            tagname: "#some",
                            payload: Some(
                                TypeVariable {
                                    name: "@TVAR1",
                                },
                            ),
                        },
                    ],
                    bound: AtLeast,
                    catch_all: false,
                },
            ),
            actual_type: Number,
        },
    ),
)
