src/snapshots/kk__test_type_check__null_literal.snap
---
source: src/main.rs
expression: "type_check_source(\"\n         let x: null = null\n         let y: number = null\n         \".to_string())"
---
Err(
    UnifyError(
        TypeMismatch {
            location: Location {
                source: NonFile {
                    env_name: "TESTING",
                },
                position: Position {
                    line_start: 2,
                    line_end: 2,
                    column_start: 26,
                    column_end: 29,
                },
            },
            expected_type: Named {
                name: "number",
                arguments: [],
            },
            actual_type: Named {
                name: "null",
                arguments: [],
            },
        },
    ),
)
